UV Editor proportional editing circle draws wrong #80931

Closed
opened 2020-09-18 15:38:26 +02:00 by Philipp Oeser · 6 comments
Member

System Information
Operating system: Linux-5.8.4-200.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66

Blender Version
Broken: version: 2.91.0 Alpha, branch: master (modified), commit date: 2020-09-18 12:20, hash: a5dccd3320
Worked: before d6525e8d13

Short description of error
UV Editor proportional editing circle draws wrong

Exact steps for others to reproduce the error
from the default startup file:

  • switch to UV Editing workspace
  • enable Proportional Editing
  • select a UV
  • start moving
  • wrong: center is always lower left corner of the editor
  • wrong radius also seems to be in pixels now? was some other unit before (drawn radius does not correspond to area of influence)

#80931.blend

**System Information** Operating system: Linux-5.8.4-200.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master (modified), commit date: 2020-09-18 12:20, hash: `a5dccd3320` Worked: before d6525e8d13 **Short description of error** UV Editor proportional editing circle draws wrong **Exact steps for others to reproduce the error** from the default startup file: - switch to UV Editing workspace - enable Proportional Editing - select a UV - start moving - wrong: center is always lower left corner of the editor - wrong radius also seems to be in pixels now? was some other unit before (drawn radius does not correspond to area of influence) [#80931.blend](https://archive.blender.org/developer/F8905719/T80931.blend)
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Jeroen Bakker was assigned by Philipp Oeser 2020-09-18 15:39:10 +02:00
Member

As you describe it it seems like the drawing of the Proporional editing circle is done using the incorrect viewport (matrix). Can you add a screenie. I am not able to see any proportional editing circle at all in latest master.

As you describe it it seems like the drawing of the Proporional editing circle is done using the incorrect viewport (matrix). Can you add a screenie. I am not able to see any proportional editing circle at all in latest master.
Author
Member

You have to increase the radius to something like 200 or so (since you are starting off with 1.0 -- this time in pixels)

You have to increase the radius to something like 200 or so (since you are starting off with 1.0 -- this time in pixels)

This issue was referenced by abc90d6b03

This issue was referenced by abc90d6b036dce1b5003d487a266b8d48126fa1c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80931
No description provided.