Fix T80931: Proporional Editing Cursor Draws Incorrect

The incorrect view was setup so it was drawn in pixel space. This patch
changes it to use UV space.